# Claude-Tab

./: CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
crates/core/src/: config.rs  hook_listener.rs  lib.rs  profile.rs  skills.rs  state_machine.rs  worktree.rs
crates/core/src/traits/: factory.rs
crates/extensions/system-notify/src/: lib.rs
crates/extensions/telegram-bot/: Cargo.toml
crates/extensions/telegram-bot/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  reader.rs  scanner.rs  tailer.rs
crates/tauri-bridge/src/: commands.rs  ipc.rs  lib.rs
docs/: focus-fix-sigwinch.md
scripts/: release.sh
src/: styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs
src/extensions/inactivity-switch/: index.tsx
src/extensions/policy-badge/: index.tsx
src/extensions/profile-launcher/: index.tsx
src/extensions/profiles/: McpPicker.tsx  ProfileEditor.tsx  ProfilesPanel.tsx  SkillPicker.tsx  SystemPromptPicker.tsx
src/extensions/settings/: SettingsPanel.tsx
src/extensions/tab-bar/: HistorySection.tsx  index.tsx
src/extensions/terminal-panel/: UnifiedTerminal.tsx  index.tsx
src/extensions/update-notifier/: index.tsx
src/extensions/window-focus/: index.ts
src/kernel/: ConfigProvider.tsx  SessionStateContext.tsx  SessionStateManager.ts  index.ts
src/sdk/: useSession.ts
src/shell/: App.tsx
src/types/: kernel.ts  profile.ts  session.ts
website/app/: page.tsx
